# cos_uploader

./: .gitignore  pyproject.toml
cos_uploader/: __main__.py  cli.py  handler.py
tests/: test_cos_uploader.py  test_filetype.py  test_handler.py
