[tool.poetry]
name = "cos_uploader"
version = "0.0.0"
description = ""
authors = ["zhangjiabo <edsion@oppo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cos-python-sdk-v5 = "^1.9.20"
watchdog = "^2.1.9"
typer = "^0.5.0"
loguru = "^0.6.0"
filetype = "^1.0.13"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = true
style = "semver"
bump = true

[build-system]
requires = ["poetry>=1.2.0b1", "poetry-dynamic-versioning-plugin"]
build-backend = "poetry.masonry.api"
