[tool.poetry]
name = "cos_uploader"
version = "0.0.0"
description = ""
authors = ["zhangjiabo <edsion@oppo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cos-python-sdk-v5 = "^1.9.20"
watchdog = "^2.1.9"
typer = "^0.5.0"
loguru = "^0.6.0"
filetype = "^1.0.13"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-timeout = "^2.1.0"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
minversion = "7.0"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(filename)s(%(lineno)d) %(levelname)s %(message)s"

addopts = "-p no:cacheprovider --showlocals --cov=cos_uploader"   # 带cov不支持调试
# addopts = "-p no:cacheprovider --showlocals"

[tool.poetry.scripts]
cos-uploader = "cos_uploader.cli:app"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = true
style = "semver"
bump = true

[build-system]
requires = ["poetry>=1.1.0", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
